# mautic-platform

./: .gitignore  CLAUDE.md
dashboard/: .env  .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
dashboard/prisma/: schema.prisma  seed-leadspot.ts
dashboard/src/app/: globals.css  page.tsx
dashboard/src/app/api/billing/stripe/checkout/: route.ts
dashboard/src/app/api/billing/stripe/webhook/: route.ts
dashboard/src/app/api/billing/usage/: route.ts
dashboard/src/app/api/billing/wallet/: route.ts
dashboard/src/app/api/voice/agents/: route.ts
dashboard/src/app/api/voice/agents/[agentId]/: route.ts
dashboard/src/app/api/voice/calls/: route.ts
dashboard/src/app/api/voice/webhook/: route.ts
dashboard/src/app/billing/: page.tsx
dashboard/src/app/pricing/: page.tsx
dashboard/src/app/voice-ai/: page.tsx
dashboard/src/app/voice-ai/agents/new/: page.tsx
dashboard/src/components/: InfoTooltip.tsx  Sidebar.tsx
dashboard/src/components/billing/: UsageChart.tsx  WalletCard.tsx  WalletWidget.tsx  index.ts
dashboard/src/components/voice-ai/: ActionsTab.tsx  AgentConfigTabs.tsx  CallLogTable.tsx  HttpToolEditor.tsx  InstructionsTab.tsx  McpServerEditor.tsx  ModelsVoiceTab.tsx  VariableInsertButton.tsx  VoiceAgentList.tsx  VoiceAnalytics.tsx  index.ts  types.ts
dashboard/src/lib/: livekit-client.ts
dashboard/src/lib/billing/: balance-check.ts
dashboard/tasks/: rasa-voice-integration.md  todo.md
voice-agent/: .env.example  README.md  pyproject.toml
voice-agent/src/: __init__.py  agent.py
