[project]
name = "ploink-voice-agent"
version = "0.1.0"
description = "LiveKit-powered voice AI agent for Ploink CRM"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents[openai,silero,deepgram,cartesia,elevenlabs,turn-detector]~=1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "twilio>=8.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
